--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,700' type='text/css'>
         <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.0.13/css/all.css' integrity='sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp' crossorigin='anonymous'>
-        <title>2018</title>
+        <title>Pari coupe du monde 2018</title>
     </head>
     <body>
         <div id='app-root'></div>
